# CMakeTutorial

./: CMakeLists.txt  LICENSE  README.md
inc/: config.h.in
libs/lib1/: CMakeLists.txt  lib1.cpp  lib1.h  notes.txt
libs/lib2/: CMakeLists.txt  notes.txt
libs/lib2/inc/: lib2.h
libs/lib2/src/: lib2.cpp
libs/lib3/: CMakeLists.txt  func.cpp  func.h  notes.txt
libs/lib3/inc/: func1.h  func2.h
libs/lib3/src/: func1.cpp  func2.cpp
src/: main.cpp
